--- a/SmashMobile_v1/Controllers/HiringManager/Base.lproj/HiringManager.storyboard
+++ b/SmashMobile_v1/Controllers/HiringManager/Base.lproj/HiringManager.storyboard
@@ -1195,7 +1195,7 @@ Past Jobs:
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="e0o-qO-jCm"/>
-        <segue reference="zwu-Hz-SjB"/>
+        <segue reference="ldu-Tu-SXL"/>
         <segue reference="ahm-xm-XHW"/>
     </inferredMetricsTieBreakers>
 </document>
